# systemc-tlm-rgb2gray-platform

./: .gitignore  CMakeLists.txt  Makefile  README.md
scripts/: image_to_raw.cpp  image_to_raw.py  raw_to_image.cpp  raw_to_image.py
src/: accelerator.h  bus.h  cpu.h  main.cpp  memory_map.h  persistent_storage.h  ram.h
